# snap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  svec_examples.cc
include/snap/allocate/: allocator.hpp  allocator_general.hpp  allocator_sse.hpp
include/snap/config/: config.hpp  opencv.h  simd_instruction_detect.h
include/snap/matrix/: convert.hpp  convert_sse.hpp  format.hpp  matrix.hpp  matrix_base.hpp  matrix_fwd.hpp  matrix_general.hpp  matrix_sse.hpp  matrix_traits.hpp
include/snap/smat/: smat_general.hpp  smat_sse.hpp
include/snap/svec/: svec.hpp  svec_general.hpp  svec_sse.hpp
include/snap/svector/: svector_simd.hpp
include/snap/types/: types_sse.h
include/snap/util/: optimization.hpp
include/snap/utility/: performance.hpp  traits.hpp  utility.hpp
include/snap/vector/: extract_sse.hpp  vector.hpp  vector_general.hpp  vector_sse.hpp
tests/: CMakeLists.txt  config_tests.cc  matrix_tests.cc  perf.cc  smat_tests.cc  svec_tests.cc  tests.cc  timer.hpp  utility_tests.cc  vector_tests.cc
